# PhishGuard

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py
backend/app/data/: known_brands.py
backend/app/models/: schemas.py
backend/app/services/: brand_matcher.py  cache_service.py  form_analyzer.py  homograph_detector.py  risk_calculator.py  ssl_checker.py  virustotal_service.py  whois_service.py
backend/tests/: conftest.py  test_api.py  test_brand_matcher.py  test_form_analyzer.py  test_homograph.py
extension/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
extension/public/: manifest.json
extension/public/icons/: generate-icons.html
extension/src/background/: service-worker.ts
extension/src/content/: analyzer.ts
extension/src/popup/: App.tsx
extension/src/popup/components/: AnalysisDetails.tsx  Header.tsx  History.tsx  Loading.tsx  ReportButton.tsx  RiskGauge.tsx  Settings.tsx
extension/src/shared/: api.ts  constants.ts  storage.ts  types.ts
extension/src/styles/: globals.css
